--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,12 +1,7 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h1>Create a new bookmark</h1>
-      <%= simple_form_for @bookmark do |f| %>
-        <%= f.input :list %>
-        <%= f.input :comment %>
-        <%= f.submit class: 'btn btn-primary' %>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= simple_form_for [@list, @bookmark] do |f| %>
+  <%= f.input :movie, collection: Movie.all, include_hidden: false %>
+  <%= f.input :comment %>
+  <%= f.submit 'Add movie', class: 'btn btn-primary' %>
+<% end %>
+
+<%= link_to "Go back to lists", lists_path(@index) %>
