--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,12 +1,37 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+<div class="position-relative">
+  <div class="card-category card-large">
       <h1><%= @list.name %></h1>
-      <%= simple_form_for [@list] do |f| %>
-        <%= f.input :name %>
-        <%= f.submit class: 'btn btn-primary' %>
-      <% end %>
-      <%= link_to "See all lists", lists_path %>
-    </div>
   </div>
 </div>
+
+<div class="container mb-5">
+  <div class="d-flex justify-content-between my-4">
+    <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
+    <div>
+      <button type="button" class="btn btn-flat"><%= link_to "add a movie", new_list_bookmark_path(@list), class: "btn btn-primary" %>
+      </button>
+    </div>
+  </div>
+
+  <div class="row my-2">
+    <% @list.movies.each do |movie| %>
+      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+          <%= image_tag movie.poster_url, alt: movie.title, class: "movie-img rounded-top" %>
+          <div class="p-3 rounded-bottom d-flex flex-column">
+            <strong><%= movie.title %><%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
+            <small class="text-muted"><%= movie.overview %></small>
+            <div class="d-flex align-items-end justify-content-between pt-4">
+              <div>
+                <i class="fas fa-quote-left me-2"></i><small class="flex-grow-1"><%= bookmark.comment %></small>
+              </div>
+            </div>
+          </div>
+    <% end %>
+  </div>
+
+
+<%= link_to "Delete this list",
+    list_path(@list),
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+
+<%= link_to "Go back to lists", lists_path(@index) %>
